deploy/kustomize/overlays/dev/patch-ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: docuvate-web
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docuvate
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docuvate-web
                port:
                  name: http
