deploy/kustomize/overlays/dev/patch-networkpolicy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: docuvate-web
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: docuvate
      ports:
        - port: 8080
          protocol: TCP
